--- a/glide.yaml
+++ b/glide.yaml
@@ -5,5 +5,6 @@ import:
 - package: github.com/PuerkitoBio/goquery
   version: v1.1.0
 - package: github.com/mitchellh/go-homedir
+- package: github.com/fatih/color
 - package: github.com/urfave/cli
   version: v1.19.1
